Updated configuration and the about page

--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Human Learning Algorithm
-description: A Feynman-inspired attempt at maximizing my own learning (and hopefully contributing to yours!)
+title: 
+description: The personal blog of Simon Helmig. Topics of Focus: Data Science, Machine Learning, Python & Software Development. 
 github_username: helmigsimon
 
 # Email and twitter are optional:
