Added a provisionary title

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: 
+title: Simon Helmig's Blog 
 description: The personal blog of Simon Helmig. Topics of Focus: Data Science, Machine Learning, Python & Software Development. 
 github_username: helmigsimon
 
