--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Simon Helmig's Blog 
-description: The personal blog of Simon Helmig. Topics of Focus: Data Science, Machine Learning, Python & Software Development. 
+description: The personal blog of Simon Helmig. Topics of focus include Data Science, Machine Learning, Python & Software Development. 
 github_username: helmigsimon
 
 # Email and twitter are optional:
